test-compile/src/tests/01-empty-iter.stderr
error: comprehension must not be empty
 --> $DIR/01-empty-iter.rs:3:1
  |
3 | c![];
  | ^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
